Fix issues with F temp - adding z-index

--- a/src/style.css
+++ b/src/style.css
@@ -77,6 +77,7 @@ a {
   left: 120px;
   top: -20px;
   font-family: "Sedgwick Ave Display", sans-serif;
+  z-index: 10;
 }
 
 #weather-sky {
